WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51289
Initial state of checkValidity() and :invalid are incorrect with <select required>
https://bugs.webkit.org/show_bug.cgi?id=51289
Summary
Initial state of checkValidity() and :invalid are incorrect with <select requ...
Kent Tamura
Reported
2010-12-18 00:05:01 PST
Created
attachment 76939
[details]
Reproducing HTML Open the attached HTML. It shows "valueMissing=false; valid=true; checkValidity()=false" though it should show "valueMissing=false; valid=true; checkValidity()=true". It looks red (:invalid applied) though it should not look red.
http://code.google.com/p/chromium/issues/detail?id=67290
Attachments
Reproducing HTML
(433 bytes, text/html)
2010-12-18 00:05 PST
,
Kent Tamura
no flags
Details
Patch
(5.40 KB, patch)
2010-12-21 21:03 PST
,
Dai Mikurube
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dai Mikurube
Comment 1
2010-12-21 21:03:08 PST
Created
attachment 77183
[details]
Patch
Kent Tamura
Comment 2
2010-12-21 22:12:49 PST
Comment on
attachment 77183
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=77183&action=review
> LayoutTests/ChangeLog:7 > +
https://bugs.webkit.org/show_bug.cgi?id=51289
> + Initial state of checkValidity() and :invalid are incorrect with <select required> > +
nit: We usually put a summary, then a bug URL.
Kent Tamura
Comment 3
2010-12-21 22:21:04 PST
Comment on
attachment 77183
[details]
Patch Anyway, ok.
WebKit Commit Bot
Comment 4
2010-12-22 03:38:46 PST
Comment on
attachment 77183
[details]
Patch Clearing flags on attachment: 77183 Committed
r74470
: <
http://trac.webkit.org/changeset/74470
>
WebKit Commit Bot
Comment 5
2010-12-22 03:38:54 PST
Comment on
attachment 77183
[details]
Patch Rejecting
attachment 77183
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 77183]" exit_code: 1 Last 500 characters of output: ebkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 546, in __getattr__ self.forms() File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 559, in forms self._forms_factory.forms()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 228, in forms raise ParseError(exc) webkitpy.thirdparty.autoinstalled.mechanize._html.ParseError Full output:
http://queues.webkit.org/results/7250096
Dai Mikurube
Comment 6
2010-12-26 21:37:14 PST
(In reply to
comment #5
) Does anyone know the current status? The patch looks committed into the tree, and it can be built correctly despite this error in applying the patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug