2010-12-22  Dai Mikurube  <dmikurube@google.com>

Reviewed by Kent Tamura.

        https://bugs.webkit.org/show_bug.cgi?id=51289
        Initial state of checkValidity() and :invalid are incorrect with <select required>

        * fast/css/pseudo-valid-007-expected.txt:
        * fast/css/pseudo-valid-007.html:
        * fast/forms/checkValidity-002-expected.txt:
        * fast/forms/checkValidity-002.html:
2010-12-22  Dai Mikurube  <dmikurube@google.com>

        Reviewed by Kent Tamura.

        https://bugs.webkit.org/show_bug.cgi?id=51289
        Initial state of checkValidity() and :invalid are incorrect with <select required>

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::childrenChanged): setNeedsValidityCheck() after <select>'s children change.

Canonical link: https://commits.webkit.org/64811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74470 268f45cc-cd09-0410-ab3c-d52691b4dbfc